--- a/backend/pratise backend/practice project pin/pin/views/about.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/about.ejs
@@ -1,65 +1,147 @@
 <% include ./partial/header.ejs %>
-<link rel="stylesheet" href="/stylesheets/about.css">
-<div class="page1">
-    <h1>WHY WE EXIST</h1>
-    <div class="card">
-        <a href="#">JUMP TO SECTION</a>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere ullam hic sint esse doloribus autem dolore eveniet error a sapiente. Cupiditate tempora magni culpa doloremque cumque reprehenderit repellendus rem temporibus consectetur, deleniti consequatur vitae nisi, incidunt nostrum nobis? Quo iste ex, iure quidem eum incidunt debitis dolorem earum ducimus perspiciatis!</p>
+    <link rel="stylesheet" href="/stylesheets/about.css">
+    <div class="page1">
+        <h1>WHY WE EXIST</h1>
+        <div class="card">
+            <a href="#">JUMP TO SECTION</a>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere ullam hic sint esse doloribus autem
+                dolore eveniet error a sapiente. Cupiditate tempora magni culpa doloremque cumque reprehenderit
+                repellendus rem temporibus consectetur, deleniti consequatur vitae nisi, incidunt nostrum nobis? Quo
+                iste ex, iure quidem eum incidunt debitis dolorem earum ducimus perspiciatis!</p>
+        </div>
+        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/c8fa865c47d95c569b1c13c3b6dc2f24e32447e4-5504x8256.jpg/LMO_7569.jpg?rect=0,0,4733,7673&fp-x=0.4280303030303031&fp-y=0.3057499999999996&w=640&h=1038&fit=crop&crop=focalpoint&auto=format"
+            alt="">
+        <h2 class="headbtn">SO FAR TWO GOOD</h2>
     </div>
-    <img src="https://cdn.sanity.io/images/w8f1ak3c/production/c8fa865c47d95c569b1c13c3b6dc2f24e32447e4-5504x8256.jpg/LMO_7569.jpg?rect=0,0,4733,7673&fp-x=0.4280303030303031&fp-y=0.3057499999999996&w=640&h=1038&fit=crop&crop=focalpoint&auto=format" alt="">
-    <h2 class="headbtn">SO FAR TWO GOOD</h2>
-</div>
-<div class="page2">
-    <video autoplay muted loop src="/videos/final.mp4"></video>
-</div>
-<div class="page3">
-    <div class="card">
-        <h1>01</h1>
-        <h1>WHO WE ARE</h1>
-        <i class="ri-arrow-up-s-line"></i>
+    <div class="page2">
+        <video autoplay muted loop src="/videos/final.mp4"></video>
     </div>
-    <div class="card2">
-        <p>We’re the people who believe in second chances. Who believe that we are better together. Who believe in people, until they believe in themselves again.</p>
-        <img src="https://cdn.sanity.io/images/w8f1ak3c/production/c005cfd171f055933d5e944f0f2795a0627916f9-7714x5143.jpg/HQ-Group-Shot-Jes-Lindsay-4443.jpg?rect=0,2,7714,5141&w=1280&h=853&auto=format" alt="">
-    </div>
-    <div class="card3">
-        <p>It all started when our founder Rob Caslick and two mates wheeled up a BBQ to Kings Cross to cook the very best, wholesome food for those living rough. Their ’anything but snags’ proposition stood out and it wasn’t long before they garnered a loyal following. ‘How can we scale from here?’, they thought. That’s when the Buy 1, Give 1’ model came into play. Rob took a jar around the corner to see if a local domestic violence refuge would like some lunches too and it grew organically from there. 
+    <div class="page3">
+        <div class="card">
+            <h1>01</h1>
+            <h1>WHO WE ARE</h1>
+            <i class="ri-arrow-up-s-line"></i>
+        </div>
+        <div class="card2">
+            <p>We’re the people who believe in second chances. Who believe that we are better together. Who believe in
+                people, until they believe in themselves again.</p>
+            <img src="https://cdn.sanity.io/images/w8f1ak3c/production/c005cfd171f055933d5e944f0f2795a0627916f9-7714x5143.jpg/HQ-Group-Shot-Jes-Lindsay-4443.jpg?rect=0,2,7714,5141&w=1280&h=853&auto=format"
+                alt="">
+        </div>
+        <div class="card3">
+            <p>It all started when our founder Rob Caslick and two mates wheeled up a BBQ to Kings Cross to cook the
+                very best, wholesome food for those living rough. Their ’anything but snags’ proposition stood out and
+                it wasn’t long before they garnered a loyal following. ‘How can we scale from here?’, they thought.
+                That’s when the Buy 1, Give 1’ model came into play. Rob took a jar around the corner to see if a local
+                domestic violence refuge would like some lunches too and it grew organically from there.
 
-            We have since collaborated with some of the country’s best chefs to deliver the best meals we can, to domestic violence shelters and people in need. It didn’t take long for our ‘Buy 1, Give 1’ idea to extend to luxury gift packs and self care essentials, designed to spark a sense of self-worth at a time of intense vulnerability.</p>
-        <p>Social employment, however, is where we create the greatest impact. Through our flagship ‘Work Work’ employment pathways programs, we hire the women from the shelters we serve, empowering them to re-establish their self-belief and independence, while bridging the ‘love and skills’ gap in their journey to re-entering the workforce after living in crisis.
+                We have since collaborated with some of the country’s best chefs to deliver the best meals we can, to
+                domestic violence shelters and people in need. It didn’t take long for our ‘Buy 1, Give 1’ idea to
+                extend to luxury gift packs and self care essentials, designed to spark a sense of self-worth at a time
+                of intense vulnerability.</p>
+            <p>Social employment, however, is where we create the greatest impact. Through our flagship ‘Work Work’
+                employment pathways programs, we hire the women from the shelters we serve, empowering them to
+                re-establish their self-belief and independence, while bridging the ‘love and skills’ gap in their
+                journey to re-entering the workforce after living in crisis.
 
-            Basically, we’re the people who just want to do some good. And we reckon you’re one of those people, too.</p>
+                Basically, we’re the people who just want to do some good. And we reckon you’re one of those people,
+                too.</p>
+        </div>
     </div>
-</div>
-<div class="page4">
-    <div class="card">
-        <h1>02</h1>
-        <h1>MISSION AND VALUES</h1>
-        <i class="ri-arrow-down-s-line"></i>
-        <img src="https://images.pexels.com/photos/709689/pexels-photo-709689.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-        
+    <div class="page4">
+        <div class="card">
+            <h1>02</h1>
+            <h1>MISSION AND VALUES</h1>
+            <i class="ri-arrow-down-s-line"></i>
+            <img src="https://images.pexels.com/photos/709689/pexels-photo-709689.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="">
 
-    </div>
-    <div class="card">
-        <h1>03</h1>
-        <h1>OUR TEAM</h1>
-        <i class="ri-arrow-down-s-line"></i>
-        <img src="https://images.pexels.com/photos/1269968/pexels-photo-1269968.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-    </div>
-    <div class="card">
-        <h1>04</h1>
-        <h1>RECONSILATION</h1>
-        <i class="ri-arrow-down-s-line"></i>
-        <img src="https://images.pexels.com/photos/1131774/pexels-photo-1131774.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-    </div>
-    <div class="card">
-        <h1>05</h1>
-        <h1>GOOD PEOPLE</h1>
-        <i class="ri-arrow-down-s-line"></i>
-        <img src="https://images.pexels.com/photos/1767434/pexels-photo-1767434.jpeg?auto=compress&cs=tinysrgb&w=600" alt="">
-    </div>
-</div>
 
-<div>
-<script src="/javascripts/about.js"></script>
-<% include ./partial/footer.ejs %>
+        </div>
+        <div class="card">
+            <h1>03</h1>
+            <h1>OUR TEAM</h1>
+            <i class="ri-arrow-down-s-line"></i>
+            <img src="https://images.pexels.com/photos/1269968/pexels-photo-1269968.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="">
+        </div>
+        <div class="card">
+            <h1>04</h1>
+            <h1>RECONSILATION</h1>
+            <i class="ri-arrow-down-s-line"></i>
+            <img src="https://images.pexels.com/photos/1131774/pexels-photo-1131774.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="">
+        </div>
+        <div class="card">
+            <h1>05</h1>
+            <h1>GOOD PEOPLE</h1>
+            <i class="ri-arrow-down-s-line"></i>
+            <img src="https://images.pexels.com/photos/1767434/pexels-photo-1767434.jpeg?auto=compress&cs=tinysrgb&w=600"
+                alt="">
+        </div>
+    </div>
+
+    <!-- <div> -->
+        <div class="page5">
+            <div class="endpage" style="padding-top: 200px;">
+                <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
+                <i class="ri-arrow-right-line"></i>
+            </div>
+        </div>
+        <div class="page6">
+            <div class="card1 card">
+                <h3>CONNECT WITH US</h3>
+                <ul>
+                    <li>Facebook</li>
+                    <li>Instagram</li>
+                    <li>Twitter</li>
+                    <li>LinkedIn</li>
+                    <li>YouTube</li>
+                </ul>
+            </div>
+            <div class="imagcon">
+                <svg id="twogoodlogo" width="62" height="63" viewBox="0 0 62 63" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" class="go1438215768" style="transform: translate(0px, 0px);">
+                    <path
+                        d="M46.8316 0C42.9105 0 39.1501 1.59236 36.3775 4.42677C33.605 7.26119 32.0474 11.1055 32.0474 15.114C32.0474 19.1224 33.605 22.9667 36.3775 25.8011C39.1501 28.6355 42.9105 30.2279 46.8316 30.2279C50.7526 30.2279 54.513 28.6355 57.2856 25.8011C60.0582 22.9667 61.6158 19.1224 61.6158 15.114C61.6158 11.1055 60.0582 7.26119 57.2856 4.42677C54.513 1.59236 50.7526 0 46.8316 0Z"
+                        fill="currentColor"></path>
+                    <path
+                        d="M14.793 0C10.872 0 7.11154 1.59236 4.33897 4.42677C1.56639 7.26119 0.00878906 11.1055 0.00878906 15.114C0.00878906 19.1224 1.56639 22.9667 4.33897 25.8011C7.11154 28.6355 10.872 30.2279 14.793 30.2279C18.714 30.2279 22.4744 28.6355 25.247 25.8011C28.0196 22.9667 29.5772 19.1224 29.5772 15.114C29.5772 11.1055 28.0196 7.26119 25.247 4.42677C22.4744 1.59236 18.714 0 14.793 0Z"
+                        fill="currentColor"></path>
+                    <path d="M36.9805 32.7422L32.0366 37.7963L56.6819 62.9913L61.6258 57.9372L36.9805 32.7422Z"
+                        fill="currentColor"></path>
+                    <path d="M56.6836 32.7485L32.0383 57.9435L36.9822 62.9976L61.6275 37.8026L56.6836 32.7485Z"
+                        fill="currentColor"></path>
+                    <path d="M4.94386 32.7464L0 37.8005L24.6453 62.9955L29.5892 57.9414L4.94386 32.7464Z"
+                        fill="currentColor"></path>
+                    <path d="M24.647 32.7527L0.00170898 57.9477L4.94557 63.0018L29.5909 37.8068L24.647 32.7527Z"
+                        fill="currentColor"></path>
+                </svg>
+
+
+            </div>
+            <div class="card2 card">
+                <h3>THE NITTY GRITTIES</h3>
+                <ul>
+                    <li>Good Things FAQs</li>
+                    <li>Good Food FAQs</li>
+                    <li>Good Places</li>
+                    <li>Pathways</li>
+                    <li>Careers</li>
+                </ul>
+            </div>
+        </div>
+        <div class="page6-part2">
+            <h3>© TWO GOOD CO.2024 TERMS OF USE PRIVACY POLICY</h3>
+            <h4>We are proud and privileged to have our home on this land, and to be able to continue the long tradition
+                of community coming together around food, begun thousands of years ago by First Nations peoples. As we
+                stand together on this unceded land, we acknowledge our First Nations people, are the original
+                custodians of this land, and we recognise their deep connection to land, water, sky and community which
+                continues today. We pay our deep respects to community elders, past, present and emerging, for they hold
+                the memories, the traditions, the culture and hopes of Aboriginal and Torres Strait Islander peoples.
+                Always was, always will be Aboriginal land.</h4>
+            <h5 class="GRAYSCALE">ACKNOWLEDGEMENT OF COUNTRY</h5>
+        </div>
+
+        <script src="/javascripts/about.js"></script>
+        <% include ./partial/footer.ejs %>
