--- a/backend/pratise backend/practice project pin/pin/views/index.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/index.ejs
@@ -1,5 +1,6 @@
 <% include ./partial/header.ejs %>
     <div class="main">
+        <!-- lending page1 -->
         <div class="page1">
             <h1>CHANGE</h1>
             <h1>THE COURSE</h1>
@@ -14,6 +15,7 @@
 
         </div>
 
+        <!-- product img detail page 2 -->
         <div class="page2">
             <div class="elem elem1">
                 <img data-scroll data-scroll-speed="1"
@@ -83,6 +85,8 @@
                 </div>
             </div>
         </div>
+
+        <!-- product page3 -->
         <div class="page3">
             <div class="product-details">
                 <h1>WE BELIEVE IN PEOPLE, UNTIL THEY BELIEVE IN THEMSELVES AGAIN.</h1>
@@ -121,6 +125,7 @@
                 <h6>$96</h6>
             </div>
         </div>
+        <!-- IMPACT page4 -->
         <div class="page4">
             <div class="story">
                 <h1>OUR IMPACT.</h1>
@@ -140,6 +145,7 @@
                     alt="">
             </div>
         </div>
+        <!-- footer page5 and 6 -->
         <div class="page5">
             <div class="endpage">
                 <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
