--- a/backend/pratise backend/practice project pin/pin/views/shop.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/shop.ejs
@@ -5,7 +5,7 @@
 
      <div class="curcer"></div>
     <div class="main">
-      
+      <!-- lending page -->
         <div class="page1">
             <div class="card1">
                 <h1>GOOD</h1>
@@ -20,6 +20,7 @@
             </div>
         </div>
 
+        <!-- product pages -->
         <div class="page2 chaids">
             <div class="card1 chaid">
                 <img src="https://cdn.sanity.io/images/w8f1ak3c/production/ff380ebfee344ff98d24d4156ded6b9dc22a2a2a-5000x5000.png/Change-The-Course-Cookbook-Two-Good-Co.png?w=1024&h=1024&auto=format"
@@ -87,7 +88,7 @@
 
         </div>
 
-
+        <!-- footer page -->
         <div class="page5">
             <div class="endpage">
                 <h1>ENTER YOUR EMAIL ADDRESS FOR GOOD</h1>
