--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/about.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/about.css
@@ -14,7 +14,7 @@ html,body{
 .page1{
     /* min-height: 100vh; */
     width: 100%;
-    background-color: rgb(240, 191, 130);
+    background-image: linear-gradient(#FCBF9C,#F9E2D5);
 }
 
 
@@ -195,3 +195,103 @@ html,body{
     opacity: 0;
 
 }
+
+
+
+
+
+
+
+.page5.endpage h1{
+    font-size: 5vh;
+  }
+  
+  .page5 i{
+    font-size: 4vh;
+    font-weight: 100;
+  }
+  
+  
+  
+  
+  
+  /* page6  */
+  
+  .page6{
+    min-height: 20vh;
+    width: 100%;
+    display: flex;
+    align-items:flex-start;
+    justify-content: space-between;
+    padding: 0px 40px;
+    padding-top: 30vh;
+    padding-bottom: 5vh;
+    position: relative;
+    z-index: 99;
+  }
+  
+  .page6 .card1 li{
+    list-style-type: none;
+    padding: 2px;
+    font-size: 20px;
+    font-weight: 100;
+  }
+  
+  .page6 .card1 li:hover{
+    color: #6c6868;
+  }
+  
+  .page6 h3{
+    margin-bottom: 20px;
+    color: gray;
+  }
+  
+  
+  
+  .page6 .card2 li{
+    list-style-type: none;
+    padding: 2px;
+    font-size: 20px;
+    font-weight: 100;
+    text-align: end;
+  }
+  
+  .page6 .card2 li:hover{
+    color: #6c6868;
+  }
+  
+  
+  .page6 svg{
+    height: 27vh;
+    width: 100%;
+    opacity: 1;
+  }
+  
+  .page6-part2{
+    text-align: center;
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 99;
+  }
+  
+  .page6-part2 h3{
+    font-weight: 100;
+    color: gray;
+  
+  }
+  
+  .page6-part2 h4{
+    text-align: center;
+    padding: 70px;
+    font-size: 20px;
+    font-weight: 100;
+  }
+  
+  .page6-part2 .GRAYSCALE{ 
+    color: #8d8888;
+    font-size: 15px;
+  }
+  
