--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/bespoke.css
@@ -44,7 +44,7 @@ h4{
 .navbar .part2 a{
     color: #111;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 
@@ -170,7 +170,7 @@ h4{
 }
 
 .page2 p{
-    font-size: 1vw;
+    font-size: 23px;
     text-transform: capitalize;
 }
 
@@ -195,10 +195,10 @@ h4{
 
 footer{
     height: 24vh;
-    max-width: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     background-color: #111;
     color: #fff;
     margin-top: 100px;
@@ -214,7 +214,6 @@ footer .card1{
     flex-direction: column;
     align-items: start;
     font-size: 20px;
-
 
 }
 
