--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/style.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/style.css
@@ -95,209 +95,7 @@ body{
 }
 
 
-/* menubar style */
-/* .menu{
-  height: 100vh;
-  width: 100%;
-  background-color:#111;
-  color: #fff;
-  position: absolute;
-  z-index: 40;
-  opacity: 1;
-  display: flex;
-  align-items:end;
-  justify-content: space-between;
-  padding: 10px 10px;
-}
-
-.menu .contenercardx{
-  display: flex;
-}
-
-.menu li{
-  list-style-type: none;
-  font-size: 20px;
-  font-weight: 100;
-}
-
-.menu .bar li{
-  font-size: 7vh;
-  font-weight: 1000;
-  text-transform: uppercase;
-  
-}
-
-
-.menu .cardz{
-  margin-bottom: 10px;
-  margin-left:10vw ;
-}
-
-.menu .cardy{
-  margin-bottom: 64px;
-  margin-left:10vw ;
-}
-
-
-.menu .cardx li{
-  color:rgb(174, 168, 168);
-  font-size: 20px;    
-}
-
-.menu .cardy li{
-  color:rgb(174, 168, 168);
-  font-size: 20px;    
-}
-
-.menu .cardz li{
-  color:rgb(174, 168, 168);
-  font-size: 20px;    
-}
-
-.menu h3{
-  font-size: 27px;
-  margin-bottom: 16px;
-} */
-
-/* card style */
-/* 
-.card-details{
-  min-height: 92vh;
-  width: 100vw;
-  background-color: #111;
-  position: absolute;
-  z-index: 41;
-  opacity: 1;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  padding-top: 230px;
-}
-
-
-
-
-
-.card-details h1{
-  font-size: 35px;
-  text-transform: lowercase;
-  padding-bottom: 40px;
-  color: #fff;
-  font-weight: 100;
-  margin-bottom: 50px;
-
-}
-
-.card-details h2{
-  border: 2px solid #fff;
-  border-radius: 30px;
-  padding: 30px 100px;
-  font-size: 25px;
-  text-transform: uppercase;
-  color: #fff;
-  font-weight: 700;
-
-}
-
-
-
-#scroller{
-  white-space:nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
-  position: relative;
-  z-index: 10;
-  border-top: 3px solid #fff;
-  margin-top: 25px;
-}
-
-
-#scroller::-webkit-scrollbar{
-  display: none;
-}
-
-
-#scroller-in{
-  display: inline-block;
-  white-space: nowrap;
-  animation-name: scroll;
-  animation-duration: 25s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-#scroller h4{
-  display:inline-block;
-  font-size: 110px;
-  font-weight: 900;
-  font-family: gilroy;
-  margin-right: 20px;
-  transition: all linear 0.5s;
-  color:#fff;
-  text-transform: uppercase;
-
-}
-
-
-@keyframes scroll {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}
-
-
-
-#scroller2{
-  white-space:nowrap;
-  overflow-x: auto;
-  overflow-y: hidden;
-  position: relative;
-  z-index: 10;
-  border-top: 3px solid #fff;
-}
-
-
-#scroller2::-webkit-scrollbar{
-  display: none;
-}
-
-
-#scroller-in2{
-  display: inline-block;
-  white-space: nowrap;
-  animation-name: scroll2;
-  animation-duration: 25s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-}
-
-#scroller2 h4{
-  display:inline-block;
-  font-size: 110px;
-  font-weight: 900;
-  font-family: gilroy;
-  margin-right: 20px;
-  transition: all linear 0.5s;
-  color:#fff;
-  text-transform: uppercase;
-
-}
-
-@keyframes scroll2 {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(100%);
-  }
-  
-} */
-
-
+/* mouse circul mover */
 
 .curcer{
   height: 150px;
@@ -310,6 +108,7 @@ body{
   
 }
 
+/* landing page */
 .page1{
   min-height: 100hv;
   width: 100%;
@@ -368,7 +167,7 @@ body{
 }
 
 
-/* page2 */
+/*page2 product imgs */
 
 .page2{
   min-height: 100vh;
@@ -529,13 +328,9 @@ body{
 }
 
 
-/* .cotener2 ul li #gifts{
-  padding-left: 80px;
-} */
 
 
-
-/* page3 */
+/*product page3 */
 
 .page3{
   min-height: 100vh;
@@ -595,14 +390,14 @@ body{
   height: 79vh;
   width: 50%;
   margin-bottom: 5vh;
-  opacity: 1;
+  opacity: 0;
 }
 
 .child2{
   height: 79vh;
   width: 50%;
   margin-bottom: 5vh;
-  opacity: 1;
+  opacity: 0;
   padding: 5vw;
 }
 
@@ -628,7 +423,7 @@ body{
   font-weight: 100;
 }
 
-/* page4 style */
+/* impacat page4  style */
 
 .page4{
   min-height: 100vh;
@@ -677,6 +472,9 @@ body{
   padding: 0px 40px;
   border-bottom: 1px solid gray;
 }
+
+
+/* footer page5 and page6 */
 
 .page5.endpage h1{
   font-size: 5vh;
@@ -781,7 +579,7 @@ body{
 
 
 
-
+/* responsive pages for mobile user */
 @media (max-width:600px) { 
 
 
@@ -824,214 +622,6 @@ body{
   
   
   
-  
-  /* menubar style */
-  /* .menu{
-      height: 100vh;
-      width: 100%;
-      background-color:#3d3a3a;
-      color: #fff;
-      position: absolute;
-      z-index: -40;
-      opacity: 0;
-      display: flex;
-      align-items:center;
-      justify-content:space-between;
-      padding: 10px 10px;
-  }
-
-  .menu .contenercardx{
-      display: flex;
-      align-items:flex-start;
-      margin-top: 100vh;
-      
-
-
-  }
-
-  .menu .contenercardx h3{
-      font-size: 3vw;
-      text-transform: uppercase;
-      margin-top: -23vh;
-  }
-
-  .menu .contenercardx ul li{
-      font-size: 2.5vw;
-      
-  }
-
-  .contenercardx .cardx{
-      margin-right: 2vw;
-  }
-
-  .contenercardx .cardy{
-      margin-right: 1vw;
-  }
-
-  
-  .menu .bar{
-      margin-left: -100vw;
-  }
-  .menu .bar li{
-      font-size: 4vh;
-      font-weight: 1000;
-      text-transform: uppercase;
-      
-  }
-  
-  .menu .cardx li{
-      color:rgb(174, 168, 168);
-      font-size: 20px;    
-  }
-  
-  .menu .cardy li{
-      color:rgb(174, 168, 168);
-      font-size: 20px;    
-  }
-  
-  .menu .cardz li{
-      color:rgb(174, 168, 168);
-      font-size: 20px;    
-  }
-  
-  .menu h3{
-      font-size: 27px;
-      margin-bottom: 16px;
-  } */
-  
-  /* card style */
-/*   
-  .card-details{
-      min-height: 50vh;
-      width: 100%;
-      background-color: #111;
-      position: absolute;
-      z-index: -41;
-      opacity: 0;
-      display: flex;
-      align-items: center;
-      flex-direction: column;
-      justify-content: center;
-      padding-top: 25vh;
-  }
-  
-  .card-details h1{
-      font-size: 3vh;
-      text-transform: lowercase;
-      padding-bottom: 40px;
-      color: #fff;
-      font-weight: 100;
-  
-  }
-  
-  .card-details h2{
-      border: 2px solid #fff;
-      border-radius: 30px;
-      padding: 30px 100px;
-      font-size: 3vw;
-      text-transform: uppercase;
-      color: #fff;
-      font-weight: 700;
-      margin-bottom: 100px;
-  
-  }
-  
-  
-  #scroller{
-      white-space:nowrap;
-      overflow-x: auto;
-      overflow-y: hidden;
-      position: relative;
-      z-index: 10;
-      border-top: 3px solid #fff;
-  }
-  
-  
-  #scroller::-webkit-scrollbar{
-      display: none;
-  }
-  
-  
-  #scroller-in{
-      display: inline-block;
-      white-space: nowrap;
-      animation-name: scroll;
-      animation-duration: 25s;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-  }
-  
-  #scroller h4{
-      display:inline-block;
-      font-size: 10vh;
-      font-weight: 900;
-      font-family: gilroy;
-      margin-right: 20px;
-      transition: all linear 0.5s;
-      color:#fff;
-      text-transform: uppercase;
-  
-  }
-  
-  
-  @keyframes scroll {
-      from {
-        transform: translateX(0);
-      }
-      to {
-        transform: translateX(-100%);
-      }
-    }
-  
-  
-  
-    #scroller2{
-      white-space:nowrap;
-      overflow-x: auto;
-      overflow-y: hidden;
-      position: relative;
-      z-index: 10;
-      border-top: 3px solid #fff;
-  }
-  
-  
-  #scroller2::-webkit-scrollbar{
-      display: none;
-  }
-  
-  
-  #scroller-in2{
-      display: inline-block;
-      white-space: nowrap;
-      animation-name: scroll2;
-      animation-duration: 25s;
-      animation-timing-function: linear;
-      animation-iteration-count: infinite;
-  }
-  
-  #scroller2 h4{
-      display:inline-block;
-      font-size: 10vh;
-      font-weight: 900;
-      font-family: gilroy;
-      margin-right: 20px;
-      transition: all linear 0.5s;
-      color:#fff;
-      text-transform: uppercase;
-  
-  }
-  
-  @keyframes scroll2 {
-      from {
-        transform: translateX(0);
-      }
-      to {
-        transform: translateX(100%);
-      }
-      
-    }
-   */
-
 
 
 
@@ -1287,6 +877,8 @@ body{
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      opacity: 1;
+
   }
 
   .child2{
@@ -1296,6 +888,8 @@ body{
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      opacity: 1;
+
 
   }
 
