--- a/backend/pratise backend/practice project pin/pin/views/menu.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/menu.ejs
@@ -35,10 +35,10 @@
             <div class="card">
                     <a href="/shop">shop</a>
                     <a href="/catering">catering<i class="ri-arrow-right-up-line"></i></a>
-                    <a href="#">impact</a>
+                    <a href="/">impact</a>
                     <a href="/stories">stories</a>
                     <a href="/about">about</a>
-                    <a href="#">Contact</a>
+                    <a href="/">Contact</a>
                     <a href="/donate">Donate</a>
                     <a class="sigbtn" href="#">Sign in</a>
             </div>
