--- a/backend/pratise backend/practice project pin/pin/views/shared.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/shared.ejs
@@ -1,7 +1,8 @@
+<form action="">
 <a class="minus" href="#" style="text-decoration: none; color: #fff;">-</a>
-<a class="num" href="#" style="text-decoration: none; color: #fff;">1</a>
+<a class="num"  href="#" style="text-decoration: none; color: #fff;">1</a>
 <a class="plus" href="#" style="text-decoration: none; color: #fff;">+</a>
-
+</form>
 
 
 
