--- a/backend/pratise backend/practice project pin/pin/views/shop.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/shop.ejs
@@ -30,8 +30,8 @@
 
             </div>
             <div class="card2 chaid">
-                <img src="https://cdn.sanity.io/images/w8f1ak3c/production/adb77436d60e62d2b5b0574016abcc864b8e65b0-4498x2999.png/DSC0078_Dexter%20Kim.png?rect=470,108,3458,2760&fp-x=0.4888698630136987&fp-y=0.49614340367765025&w=1024&h=817&fit=crop&crop=focalpoint&auto=format"
-                    alt="">
+                <a href="/product"><img src="https://cdn.sanity.io/images/w8f1ak3c/production/adb77436d60e62d2b5b0574016abcc864b8e65b0-4498x2999.png/DSC0078_Dexter%20Kim.png?rect=470,108,3458,2760&fp-x=0.4888698630136987&fp-y=0.49614340367765025&w=1024&h=817&fit=crop&crop=focalpoint&auto=format"
+                    alt=""></a>
                 <h5>CHANGE THE COURSE COOK KIT</h5>
                 <h5>$95</h5>
 
