--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/donate.css
@@ -113,7 +113,7 @@
 
 .bar h5{
     width: 100%;
-    font-size: 2vw;
+    font-size: 1.7vw;
     font-weight: 800;
     text-align: start;
     padding-bottom: 100px;
@@ -221,4 +221,12 @@
   color: #cdc9c9;
   /* margin-left: 33px; */
   margin-top: 20px;
+}
+
+
+.bar input{
+  margin-top: 10px;
+  margin-left: 5px;
+  padding: 10px 50px;
+  border-radius: 30px;
 }
