--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/menu.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/menu.css
@@ -171,13 +171,6 @@
 
   @media (max-width:600px){
 
-    /* html,body{
-      height: 100%;
-      width: 100%;
-      padding: 0px;
-      margin: 0px;
-      overflow-y: hidden;
-  } */
     /* menubar style */
     .header-nav .nav-part2 .icon{
       display: flex;
@@ -191,7 +184,7 @@
   .menu{
       height: 100vh;
       width: 100%;
-      background-color:#3d3a3a;
+      background-color:#111;
       color: #cdc9c9;
       position: absolute;
       z-index: 40;
