--- a/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
@@ -15,7 +15,7 @@
                 <!-- <%- include("shared.ejs") -%> -->
                 <form action="/add-to-card" method="post">
                 <a class="minus" href="#" style="text-decoration: none; color: #fff;">-</a>
-                <a class="num" href="#" style="text-decoration: none; color: #fff;">1</a>
+                <a class="num" href="#" style="text-decoration: none; color: #fff;padding-left: 20px;padding-right: 20px;">1</a>
                 <a class="plus" href="#" style="text-decoration: none; color: #fff;">+</a>
             </form>
             </div>
@@ -39,8 +39,8 @@
         </div>
         <div class="card4"
             style="float: right; margin-right: 20px; border: 1px solid #fff; padding: 20px 300px;border-radius: 30px; margin-top: 50px;">
-            <!-- <h1 style="font-size: 20px; font-weight: 500;">CHECKOUT</h1> -->
-            <input type="submit" value="addtocard">
+            <h1 style="font-size: 20px; font-weight: 500;">CHECKOUT</h1>
+            <!-- <input type="submit" value="addtocard"> -->
         </div>
     </form>
         <div class="card5" style="margin-top: 200px; font-size: 3vw;width: 70%;padding-left:20px ;">
