--- a/backend/pratise backend/practice project pin/pin/views/donate.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/donate.ejs
@@ -50,7 +50,7 @@
                     <a href="#">&#x20B9;5278</a>
                     <a href="#">&#x20B9;10,555</a>
                 </div>
-                <form action="/donate" method="post">
+                <form action="/donate2" method="post">
                 <div class="card3">
                     <textarea name="donate" id="donate" cols="1" rows="1"> &#x20B9;</textarea>
                 </div>
