--- a/backend/pratise backend/practice project pin/pin/views/menu.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/menu.ejs
@@ -38,7 +38,7 @@
                     <a href="/">impact</a>
                     <a href="/stories">stories</a>
                     <a href="/about">about</a>
-                    <a href="/">Contact</a>
+                    <a href="/contact">Contact</a>
                     <a href="/donate">Donate</a>
                     <a class="sigbtn" href="#">Sign in</a>
             </div>
