--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/about.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/about.css
@@ -191,7 +191,7 @@ html,body{
     border-radius: 50%;
     position: absolute;
     transform: translate(-10%,-200%);
-    transition: all ease 0.2s;
+    transition:linear 0.3s;
     opacity: 0;
 
 }
