--- a/backend/pratise backend/practice project pin/pin/views/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catering.ejs
@@ -2,8 +2,8 @@
 <link rel="stylesheet" href="/stylesheets/catering.css">
 <h4>We are at capacity for any new catering orders until 18th March. Please contact 0497 889 927 if you have any questions.</h4>
 <div class="searbar" style="display: flex; align-items: center; justify-content: center; height: 100px;display: none; transition: all ease-in 1s;">
-    <p style="font-size: 20px; font-weight: 800;">Search: <input style="border: 1px solid #808080; padding: 15px 0px;width: 25vw; border-radius: 5px 0px 0px 5px;" type="text" placeholder="Search for product"></p>
-    <i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"  class="fa-solid fa-magnifying-glass"></i>
+    <p style="font-size: 20px; font-weight: 800;">Search: <input style="border: 1px solid #808080; padding: 15px 0px;width: 25vw; border-radius: 5px 0px 0px 5px;" type="search" placeholder="Search for product"></p>
+    <a href="/lunch"><i style="border: 1px solid gray; padding: 14.5px 15px; margin-right: 20px;"  class="fa-solid fa-magnifying-glass"></i></a>
     <a id="searbtn2" href="#" style="text-decoration: none; color: #111; font-size: 20px; border-left: 0.5px solid gray; padding: 10px 0px; font-weight: 800;"> <i class="fa-solid fa-xmark"></i>Search</a>
 </div>
 <header class="navbar">
@@ -64,26 +64,28 @@
     <img src="https://az727718.vo.msecnd.net/c34bf49efec4419a808454d753e542b5/images/d3b249074f2d48c89939f0c1e399cf29_1728w.jpg" alt="">
 </div>
 <div class="page2">
-    <div class="card card1">
-        <h3>Lorem ipsum dolor sit amet.</h3>
-    </div>
-    <div class="card card2">
+    <a style="text-decoration: none;" href="/products"><div class="card card1">
+        <h3>MORNING</h3>
+    </div></a>
+
+    <a style="text-decoration: none;" href="/lunch"><div class="card card2">
         
-        <h3>Lorem ipsum dolor sit amet.</h3>
-    </div>
+        <h3>LUNCH</h3>
+    </div></a>
+
     <div class="card card3">
         
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>AFTERNOON</h3>
     </div>
     <div class="card card4">
 
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>EVENING</h3>
     </div>
     <div class="card card5">
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>BIO DISPOSABLES</h3>
     </div>
     <div class="card card6">
-        <h3>Lorem ipsum dolor sit amet.</h3>
+        <h3>INDIVIDUALLY PACKAGED MEALS</h3>
     </div>
 </div>
 
