backend project updates

--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/addtocard.css
@@ -43,11 +43,17 @@ html,body{
 
   }
 
-.main .card4:hover{
-    background-color: #fff;
-    color: #111;
-    
+
+.main .card4 a{
+    text-decoration: none;
 }
 
+
+
+.main .card4:hover{
+    background-color: #fff;
+    color:#111;
+    
+}
 
 
