--- a/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/addtocard.ejs
@@ -39,7 +39,7 @@
         </div>
         <div class="card4"
             style="float: right; margin-right: 20px; border: 1px solid #fff; padding: 20px 300px;border-radius: 30px; margin-top: 50px;">
-            <h1 style="font-size: 20px; font-weight: 500;">CHECKOUT</h1>
+            <a href="/checkout">CHECKOUT</a>
             <!-- <input type="submit" value="addtocard"> -->
         </div>
     </form>
