--- a/backend/pratise backend/practice project pin/pin/views/lunch.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/lunch.ejs
@@ -77,7 +77,7 @@
         alt="">
 </div>
 
-<div class="product-page">
+<div class="product-page lunch-product">
     <div class="card1">
         <a style="text-decoration: none;color: #111;" href="/products"><h1>Morning</h1></a>
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/lunch"><h1 style="font-weight: 800;">Lunch</h1></a>
@@ -121,4 +121,4 @@
         </h5>
     </div>
 </footer>
-<script src="/javascripts/catring.js"></script>
+<script src="/javascripts/lunch.js"></script>
