--- a/backend/pratise backend/practice project pin/pin/views/catering.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/catering.ejs
@@ -73,10 +73,10 @@
         <h3>LUNCH</h3>
     </div></a>
 
-    <div class="card card3">
+    <a style="text-decoration: none;" href="/Afternoon"><div class="card card3">
         
         <h3>AFTERNOON</h3>
-    </div>
+    </div></a>
     <div class="card card4">
 
         <h3>EVENING</h3>
