--- a/backend/pratise backend/practice project pin/pin/views/products.ejs
+++ b/backend/pratise backend/practice project pin/pin/views/products.ejs
@@ -81,7 +81,7 @@
     <div class="card1">
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/products"><h1 style="font-weight: 800;">Morning</h1></a>
         <a style="text-decoration: none; font-weight:800;color: #111;" href="/lunch"><h1>Lunch</h1></a>
-        <h1>Afternoon</h1>
+        <a  style="text-decoration: none; font-weight:800;color: #111;" href="/Afternoon"><h1>Afternoon</h1></a>
         <h1>Evening</h1>
         <h1>Individually Packeaged
             Meals</h1>
