--- a/backend/pratise backend/practice project pin/pin/public/stylesheets/catering.css
+++ b/backend/pratise backend/practice project pin/pin/public/stylesheets/catering.css
@@ -158,6 +158,7 @@ h4{
     align-items: start;
     justify-content: space-evenly;
     gap: 10px;
+
 }
 
 .product-page .card1{
@@ -182,11 +183,9 @@ h4{
 .product-page .card2{
     /* background-color:blue; */
     width: 70%;
-    display: flex; 
-    align-items: start; 
-    justify-content: space-evenly; 
-    flex-wrap: wrap;
-    gap: 50px;
+    display: grid; 
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 50px;
 }
 
 .product-page .card2 .cards{
@@ -194,17 +193,18 @@ h4{
     align-items: start;
     justify-content:space-between; 
     border: 1px solid rgba(128, 128, 128, 0.182);
-    padding: 10px 10px 40px 10px;
+    padding: 10px 0px 40px 10px;
     border-radius: 5px;
+    /* background-color: red; */
 }
 
 .product-page .card2 .cards .card{
-    width: 60%;
+    width: 65%;
     /* background-color: red; */
    
 }
 .product-page .card2 .cards .card2{
-    width: 50%;
+    width: 35%;
     /* background-color: blue; */
 }
 
